Fix the state of nearby peers list not showing correctly

--- a/desktop/src/input.css
+++ b/desktop/src/input.css
@@ -235,7 +235,7 @@
 }
 
 .os-theme-custom.os-scrollbar {
-  --os-size: 8px;
+  --os-size: 3px;
   --os-padding-perpendicular: 0px;
   --os-padding-axis: 0px;
 }
