--- a/web-next/app/globals.css
+++ b/web-next/app/globals.css
@@ -204,34 +204,32 @@
   }
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-.os-theme-custom.os-scrollbar {
-  --os-size: 8px;
-  --os-padding-perpendicular: 0px;
-  --os-padding-axis: 0px;
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+  scrollbar-gutter: stable overlay;
+  scroll-behavior: smooth;
 }
 
-.os-theme-custom.os-scrollbar .os-scrollbar-track {
-  background-color: rgba(30, 30, 30, 0.6);
+/* WebKit browsers (Chrome, Edge, Safari) */
+*::-webkit-scrollbar {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 }
 
-.os-theme-custom.os-scrollbar .os-scrollbar-handle {
-  background-color: rgba(80, 80, 80, 0.8);
-  border-radius: 4px;
-  transition: background-color 0.2s ease;
-}
-
-.os-theme-custom.os-scrollbar .os-scrollbar-handle:hover {
-  background: rgba(120, 120, 120, 0.9);
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .line-clamp-3-ellipsis {
